CHANGES.txt - 11/21/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- The scheduler now adds a job-actual-printer-uri
	  attribute to job objects when printing to a class (STR
	  #116)
	- The scheduler now logs log file open errors to the
	  system log (STR #1289)
	- The scheduler now sets the job-originating-user-name to
	  the authenticated username, if available (STR #1318)
	- The scheduler now only updates the permissions of SSL
	  keys and certificates when they are under the
	  ServerRoot directory (STR #1324)
	- The rastertodymo driver has been renamed to
	  rastertolabel (a symlink is installed so that existing
	  queues continue to work) and now also supports Zebra's
	  CPCL language.
	- The lpstat command could show the wrong active job for
	  a printer (STR #1301)
	- Fixed a potential crash problem in the scheduler when
	  aborting a CGI program (STR #1290)
	- Added a "cancel all jobs" button to the class and
	  printer web interfaces (STR #1140)
	- The add-printer web page now shows the
	  set-printer-options page after the printer has been
	  added (STR #690)
	- The classes web page now provides links to each of the
	  member printers (STR #307)
	- CUPS now handles HTTP request/response lines up to 32k
	  in length; this is mainly for better cookie support
	  (STR #1274)
	- Added support for the Apache PassEnv and SetEnv
	  directives to cupsd.conf (STR #853)
	- Added large file (64-bit) support (STR #541)
	- Fixed a performance issue with the ippReadIO()
	  implementation (STR #1284)
	- Fixed a performance issue with the scheduler's implicit
	  class implementation (STR #1283)
	- The pdftops filter now adds the Title and Creator
	  fields from the PDF file to the PostScript document
	  comments section (STR #539, STR #830)
	- Added a new cups_array_t and cupsArray*() functions to
	  the CUPS API to support sorted lists of data.
	- Made the CUPS API library thread-safe (STR #1276)
	- Added "media" option support for EFI EFMediaType option